force-app/main/default/objects/SEG_Contratos__c/SEG_Contratos__c.object-meta.xml
<CustomObject>
    <label>Contratos</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Número Contrato</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contratos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>