force-app/main/default/objects/SEG_Contratos__c/fields/SEG_1a_Reclamacion_ejecutada_manualmente__c.field-meta.xml
<CustomField>
    <fullName>SEG_1a_Reclamacion_ejecutada_manualmente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick que marca el usuario si la reclamación inicial (la 1ª) la ha hecho él vía correo electrónico manual.</description>
    <label>1a Reclamación ejecutada manualmente</label>
    <type>Checkbox</type>
</CustomField>