force-app/main/default/objects/SEG_Contratos__c/fields/SEG_3a_Reclamacion_ejecutada_manualmente__c.field-meta.xml
<CustomField>
    <fullName>SEG_3a_Reclamacion_ejecutada_manualmente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick que marca el usuario si la segunda reclamación (la 3ª) la ha hecho él vía correo electrónico manual.</description>
    <label>3a Reclamación ejecutada manualmente</label>
    <type>Checkbox</type>
</CustomField>