force-app/main/default/objects/SEG_Contratos__c/fields/SEG_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Descripcion__c</fullName>
    <description>Campo de texto libre para el usuario dónde añade la información del código GDD del contrato (código de barras). Información que el robot necesita junto con el PDF para colgarlo en GDD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción</label>
    <length>200</length>
    <type>Text</type>
</CustomField>