force-app/main/default/objects/SEG_Contratos__c/fields/SEG_Fecha_1_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Fecha_1_Reclamacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha 1ª Reclamación</label>
    <type>Date</type>
</CustomField>