force-app/main/default/objects/SEG_Contratos__c/fields/SEG_Fecha_2a_Reclamacion_Proceso__c.field-meta.xml
<CustomField>
    <fullName>SEG_Fecha_2a_Reclamacion_Proceso__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha 2a Reclamación Proceso</label>
    <type>Date</type>
</CustomField>