force-app/main/default/objects/SEG_Contratos__c/fields/SEG_Fecha_Contrato__c.field-meta.xml
<CustomField>
    <fullName>SEG_Fecha_Contrato__c</fullName>
    <description>Fecha de alta del contrato. Por defecto se pondrá la fecha en la que se generó la SR de seguimiento de contratos.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Contrato</label>
    <type>Date</type>
</CustomField>