force-app/main/default/objects/SEG_Contratos__c/fields/SEG_Fecha_Envio_Gestor_Proceso__c.field-meta.xml
<CustomField>
    <fullName>SEG_Fecha_Envio_Gestor_Proceso__c</fullName>
    <description>Fecha en la que finalmente se ejecuta el envío al gestor.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Envío Gestor Proceso</label>
    <type>Date</type>
</CustomField>