force-app/main/default/objects/SEG_Contratos__c/fields/SEG_Fecha_Llamada__c.field-meta.xml
<CustomField>
    <fullName>SEG_Fecha_Llamada__c</fullName>
    <description>Cuando el usuario marca que ha hecho la llamada se rellena automáticamente esta fecha.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Llamada</label>
    <type>Date</type>
</CustomField>