force-app/main/default/objects/SEG_Contratos__c/fields/SEG_Fecha_Llamada_Proceso__c.field-meta.xml
<CustomField>
    <fullName>SEG_Fecha_Llamada_Proceso__c</fullName>
    <description>Fecha en la que según configuración se ha activado la SR para que el usuario realice la llamada.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Llamada Proceso</label>
    <type>Date</type>
</CustomField>