force-app/main/default/objects/SEG_Contratos__c/fields/SEG_Fecha_Parada_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Fecha_Parada_Reclamacion__c</fullName>
    <description>Cuando el usuario cambia el estado a No reclamar se añade esta fecha de forma automática</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Parada Reclamación</label>
    <type>Date</type>
</CustomField>