force-app/main/default/objects/SEG_Contratos__c/fields/SEG_Fecha_Recepcion_Original__c.field-meta.xml
<CustomField>
    <fullName>SEG_Fecha_Recepcion_Original__c</fullName>
    <description>Fecha que añade el usuario cuando recibe físicamente el contrato firmado de forma original</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Recepción Original</label>
    <type>Date</type>
</CustomField>