force-app/main/default/objects/SEG_Contratos__c/fields/SEG_Idioma__c.field-meta.xml
<CustomField>
    <fullName>SEG_Idioma__c</fullName>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Castellano</fullName>
            </value>
            <value>
                <fullName>Catalán</fullName>
            </value>
            <value>
                <fullName>Inglés</fullName>
            </value>
            <value>
                <fullName>Euskera</fullName>
            </value>
            <value>
                <fullName>Galego</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>