force-app/main/default/objects/SEG_Contratos__c/fields/SEG_Motivo_No_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Motivo_No_Reclamacion__c</fullName>
    <description>Texto libre donde el usuario indica el motivo de Parar las Reclamaciones al cambiar el estado del contrato a xxx</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo No Reclamación</label>
    <length>200</length>
    <type>Text</type>
</CustomField>