force-app/main/default/objects/SEG_Contratos__c/fields/SEG_NombreCliente__c.field-meta.xml
<CustomField>
    <fullName>SEG_NombreCliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del contacto</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El contacto debe ser un cliente / gestor.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente, Empleado</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>