force-app/main/default/objects/SEG_Contratos__c/fields/SEG_NombreCuenta__c.field-meta.xml
<CustomField>
    <fullName>SEG_NombreCuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nombre del cliente relacionado con el contrato.</description>
    <label>Nombre de la cuenta</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El cliente que esta intentando asociar no existe.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente, Centro CaixaBank, Cliente, Cliente (Segmentos)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>