force-app/main/default/objects/SEG_Contratos__c/fields/SEG_SR_Seguimiento__c.field-meta.xml
<CustomField>
    <fullName>SEG_SR_Seguimiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso Seguimiento</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>Seguimiento</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>