force-app/main/default/objects/SEG_Contratos__c/fields/SEG_Zona__c.field-meta.xml
<CustomField>
    <fullName>SEG_Zona__c</fullName>
    <description>Zona del cliente.</description>
    <formula>TEXT(SEG_NombreCuenta__r.SEG_Zona__c)</formula>
    <label>Zona</label>
    <type>Text</type>
</CustomField>