force-app/main/default/objects/SEG_Contratos__c/validationRules/SEG_ValidacionEstadoFirmado.validationRule-meta.xml
<ValidationRule>
    <fullName>SEG_ValidacionEstadoFirmado</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( SEG_Estado__c  , &quot;Firmado&quot;) ,  SEG_AdjuntoFirmadoPDF__c = FALSE)</errorConditionFormula>
    <errorDisplayField>SEG_Estado__c</errorDisplayField>
    <errorMessage>Para cambiar el estado a &quot;Firmado&quot; debe existir un PDF firmado.</errorMessage>
</ValidationRule>