force-app/main/default/objects/SEG_Contratos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SEG_Situacion_Contrato__c</columns>
    <columns>NAME</columns>
    <columns>SEG_Estado__c</columns>
    <columns>SEG_Descripcion__c</columns>
    <columns>SEG_CIF__c</columns>
    <columns>SEG_NombreCuenta__c</columns>
    <columns>SEG_NombreCliente__c</columns>
    <columns>SEG_Numerodecentro__c</columns>
    <columns>SEG_Fecha_Recepcion_Original__c</columns>
    <columns>SEG_SROriginal__c</columns>
    <columns>SEG_SR_Seguimiento__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>